--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,3 +59,22 @@ body {
     background: rgba(255, 255, 255, 0.9);
     backdrop-filter: blur(10px);
 }
+/* ==============Cart Payment=============== */
+/* ✅ CSS cho modal nền (backdrop) */
+#paymentModal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* 👈 bóng đen mờ phía sau */
+  z-index: 999;
+  justify-content: center;
+  align-items: center;
+  display: none; /* ẩn mặc định */
+}
+
+/* ✅ Khi hiển thị modal */
+#paymentModal.flex {
+  display: flex;
+}
