Added Page xmas, add banner

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,3 +78,7 @@ body {
 #paymentModal.flex {
   display: flex;
 }
+#paymentModal .modal-content {
+  transform: scale(0.7) !important;
+  transform-origin: center;
+}
